Rename files now they're not a FAQ

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -7,53 +7,53 @@
 .row
   .col-sm-9
     %h3.section#languages Programming languages
-    = render "documentation/faq/languages"
+    = render "languages"
   .col-sm-3
-    = improve_button "Improve this section", "faq/_languages.html.haml"
+    = improve_button "Improve this section", "_languages.html.haml"
 
 .row
   .col-sm-9
     %h3.section#format Storing your data
-    = render "documentation/faq/format"
+    = render "format"
   .col-sm-3
-    = improve_button "Improve this section", "faq/_format.html.haml"
+    = improve_button "Improve this section", "_format.html.haml"
 
 .row
   .col-sm-9
     %h3.section#libraries Language versions and libraries
     :markdown
-      #{render "documentation/faq/libraries.md"}
+      #{render "libraries.md"}
   .col-sm-3
-    = improve_button "Improve this section", "faq/_libraries.md"
+    = improve_button "Improve this section", "_libraries.md"
 
 .row
   .col-sm-9
     %h3.section#install Other libraries
     :markdown
-      #{render "documentation/faq/install.md"}
+      #{render "install.md"}
   .col-sm-3
-    = improve_button "Improve this section", "faq/_install.md"
+    = improve_button "Improve this section", "_install.md"
 
 .row
   .col-sm-9
     %h3.section#run_locally Testing your scraper locally
     :markdown
-      #{render "documentation/faq/run_locally.md"}
+      #{render "run_locally.md"}
   .col-sm-3
-    = improve_button "Improve this section", "faq/_run_locally.md"
+    = improve_button "Improve this section", "_run_locally.md"
 
 .row
   .col-sm-9
     %h3.section#limits Usage limits
     :markdown
-      #{render "documentation/faq/limits.md"}
+      #{render "limits.md"}
   .col-sm-3
-    = improve_button "Improve this section", "faq/_limits.md"
+    = improve_button "Improve this section", "_limits.md"
 
 .row
   .col-sm-9
     %h3.section#responsibility Your responsibility
     :markdown
-      #{render "documentation/faq/responsibility.md"}
+      #{render "responsibility.md"}
   .col-sm-3
-    = improve_button "Improve this section", "faq/_responsibility.md"
+    = improve_button "Improve this section", "_responsibility.md"
