Add a little introduction to the documentation

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -1,8 +1,14 @@
 - content_for :title, "Documentation"
 
-/ .row
-/   .col-sm-9
-/     TODO: Add a really simple introduction to what morph.io is and what it does
+.row
+  .col-sm-9
+    %p morph.io takes the hassle out of web scraping.
+
+    %p
+      Write your scraper in the language you know and love, push your code to GitHub, and
+      we take care of the boring bits. Things like running your scraper regularly, alerting you
+      if there's a problem, storing your data, and making your data available for download or
+      through a super-simple API.
 
 .row
   .col-sm-9
