--- a/app/views/documentation/php.html.haml
+++ b/app/views/documentation/php.html.haml
@@ -1,6 +1,4 @@
-%h1
-  = image_tag("languages/php.png", size: "30x30")
-  PHP
+%h1= language_name_with_icon(:php, size: "30x30")
 
 .row
   .col-sm-9
