--- a/app/views/documentation/_languages.html.haml
+++ b/app/views/documentation/_languages.html.haml
@@ -11,9 +11,6 @@
   %tbody
     - Morph::Language.languages_supported.each do |l|
       %tr
+        %td= language_name_with_icon(l.key, size: "20x20")
         %td
-          = image_tag(l.image_path, size: "20x20")
-          = l.human
-        %td
-          %code
-            = l.scraper_filename
+          %code= l.scraper_filename
