--- a/app/views/documentation/perl.html.haml
+++ b/app/views/documentation/perl.html.haml
@@ -1,6 +1,4 @@
-%h1
-  = image_tag("languages/perl.png", size: "30x30")
-  Perl
+%h1= language_name_with_icon(:perl, size: "30x30")
 
 .row
   .col-sm-9
