--- a/app/views/documentation/python.html.haml
+++ b/app/views/documentation/python.html.haml
@@ -1,6 +1,4 @@
-%h1
-  = image_tag("languages/python.png", size: "30x30")
-  Python
+%h1= language_name_with_icon(:python, size: "30x30")
 
 .row
   .col-sm-9
