--- a/app/views/documentation/ruby.html.haml
+++ b/app/views/documentation/ruby.html.haml
@@ -1,6 +1,4 @@
-%h1
-  = image_tag("languages/ruby.png", size: "30x30")
-  Ruby
+%h1= language_name_with_icon(:ruby, size: "30x30")
 
 .row
   .col-sm-9
