--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -7,10 +7,10 @@
         %ul.nav.nav-pills.nav-stacked#sidebar
           = bs_nav_link "Main documentation", documentation_index_path
           = bs_nav_link "What's New", what_is_new_documentation_index_path
-          = bs_nav_link "Ruby", ruby_documentation_index_path
-          = bs_nav_link "PHP", php_documentation_index_path
-          = bs_nav_link "Perl", perl_documentation_index_path
-          = bs_nav_link "Python", python_documentation_index_path
+          = bs_nav_link language_name_with_icon(:ruby, size: "20x20"), ruby_documentation_index_path
+          = bs_nav_link language_name_with_icon(:php, size: "20x20"), php_documentation_index_path
+          = bs_nav_link language_name_with_icon(:perl, size: "20x20"), perl_documentation_index_path
+          = bs_nav_link language_name_with_icon(:python, size: "20x20"), python_documentation_index_path
           = bs_nav_link "How to use the API", api_documentation_index_path
       .col-md-10
         = yield
