Update documentation to reflect that buildpacks is now the default

--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -26,19 +26,11 @@
 
 .row
   .col-sm-9
-    %h3.section#libraries Language versions and libraries
+    %h3.section#libraries Libraries and language versions
     :markdown
       #{render "libraries.md"}
   .col-sm-3
     = improve_button "Improve this section", "_libraries.md"
-
-.row
-  .col-sm-9
-    %h3.section#install Other libraries
-    :markdown
-      #{render "install.md"}
-  .col-sm-3
-    = improve_button "Improve this section", "_install.md"
 
 .row
   .col-sm-9
