Make wording more consistent

--- a/app/views/documentation/php.html.haml
+++ b/app/views/documentation/php.html.haml
@@ -10,7 +10,7 @@
 .row
   .col-sm-9
     :markdown
-      ### No composer.json
+      ### When there is no composer.json
 
       When there is no `composer.json` and `composer.lock` in the scraper repository, a default version of those files is installed which is as close as possible to the ScraperWiki environment as it was in January 2014. This is done to make migration from ScraperWiki as easy as possible.
 
