--- a/app/views/documentation/_what_is_new.md.erb
+++ b/app/views/documentation/_what_is_new.md.erb
@@ -26,7 +26,8 @@ a small change to the console output.
 * Don't render arbitrary html in tables anymore
 
 ### April 22
-Several significant improvements to search
+Several significant improvements to search:
+
 * Search now works across users too
 * What you searched for is now highlighted in the results
 * Search results are now paginated
