basic display of data downloads and users (static prototype)
This gives citizens an understanding that their scraper *is* being
used and *how much* it's being used by how many peope.

relates to #595

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -4,6 +4,11 @@
 
     - if active_table
       %h3 Data
+      %p.scraper-data-usage
+        %strong 1934 downloads
+        by
+        %strong 3 users.
+
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
           %li{class: ("active" if table == active_table)}
