wrap data section header content in <header>
This is semantic, and also allows more complex styling of child
elements.

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -3,11 +3,12 @@
     - active_table = scraper.database.first_table_name
 
     - if active_table
-      %h3 Data
-      %p.scraper-data-usage
-        %strong 1934 downloads
-        by
-        %strong 3 users.
+      %header.data-header
+        %h3 Data
+        %p.scraper-data-usage
+          %strong 1934 downloads
+          by
+          %strong 3 users.
 
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
