show the downloaders' avatars instead of just count (prototyp)
This gives people using and scrapering data an opportunity to
connect and find out about each other.

**This is a mockup** of showing the downloaders avatar, I've used the
ruby for showing the contributors to do this quickly, so it would
need to be changed to show the downloader, org or user instead.

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -8,7 +8,10 @@
         %p.scraper-data-usage
           %strong 1934 downloads
           by
-          %strong 3 users.
+          - # TODO: change this to show people/orgs who downloaded, not contributors
+          - scraper.contributors.each do |contributor|
+            = link_to contributor do
+              = owner_image(contributor, 30)
 
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
