--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -6,7 +6,7 @@
       %header.data-header
         %h3 Data
         %p.scraper-data-usage
-          %strong 1934 downloads
+          %strong Downloaded 1934 times
           by
           - # TODO: change this to show people/orgs who downloaded, not contributors
           - scraper.contributors.each do |contributor|
