replace contributors with hardcoded downloaders (static prototype)
This is so it always shows a few users and includes an organisation,
which is helpful to see while designing this.

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -8,10 +8,15 @@
         %p.scraper-data-usage
           %strong Downloaded 1934 times
           by
-          - # TODO: change this to show people/orgs who downloaded, not contributors
-          - scraper.contributors.each do |contributor|
-            = link_to contributor do
-              = owner_image(contributor, 30)
+          - # TODO: Replace this hardcoded stuff to show people/orgs who downloaded the scraper
+          %a{:href => "/ciudadanointeligente"}
+            %img.has-tooltip{:alt => "ciudadanointeligente", "data-container" => "body", "data-original-title" => "", "data-placement" => "bottom", "data-title" => "ciudadanointeligente", :height => "30", :src => "https://gravatar.com/avatar/15c938035f91373cb36062d6ad4ef2e5?d=https%3A%2F%2Fidenticons.github.com%2F6738e91db5a8843ba60d9147dd297d5a.png&r=x&s=30", :title => "", :width => "30"}/
+          %a{:href => "/jacksongs"}
+            %img.img-circle.has-tooltip{:alt => "jacksongs", "data-container" => "body", "data-original-title" => "", "data-placement" => "bottom", "data-title" => "jacksongs", :height => "30", :src => "https://avatars.githubusercontent.com/u/1189369?v=3&s=30", :title => "", :width => "30"}/
+          %a{:href => "/rezzo"}
+            %img.img-circle.has-tooltip{:alt => "rezzo", "data-container" => "body", "data-placement" => "bottom", "data-title" => "rezzo", :height => "30", :src => "https://avatars.githubusercontent.com/u/153339?v=3&s=30", :width => "30"}/
+          %a{:href => "/martinszy"}
+            %img.img-circle.has-tooltip{:alt => "martinszy", "data-container" => "body", "data-placement" => "bottom", "data-title" => "martinszy", :height => "30", :src => "https://avatars.githubusercontent.com/u/997732?v=3&s=30", :width => "30"}/
 
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
