--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -10,7 +10,7 @@
           by
           - # TODO: Replace this hardcoded stuff to show people/orgs who downloaded the scraper
           %a{:href => "/ciudadanointeligente"}
-            %img.has-tooltip{:alt => "ciudadanointeligente", "data-container" => "body", "data-original-title" => "", "data-placement" => "bottom", "data-title" => "ciudadanointeligente", :height => "30", :src => "https://gravatar.com/avatar/15c938035f91373cb36062d6ad4ef2e5?d=https%3A%2F%2Fidenticons.github.com%2F6738e91db5a8843ba60d9147dd297d5a.png&r=x&s=30", :title => "", :width => "30"}/
+            %img.has-tooltip{:alt => "ciudadanointeligente", "data-container" => "body", "data-original-title" => "", "data-placement" => "bottom", "data-title" => "Downloaded 5782 times by ciudadanointeligente", :height => "30", :src => "https://gravatar.com/avatar/15c938035f91373cb36062d6ad4ef2e5?d=https%3A%2F%2Fidenticons.github.com%2F6738e91db5a8843ba60d9147dd297d5a.png&r=x&s=30", :title => "", :width => "30"}/
           %a{:href => "/jacksongs"}
             %img.img-circle.has-tooltip{:alt => "jacksongs", "data-container" => "body", "data-original-title" => "", "data-placement" => "bottom", "data-title" => "jacksongs", :height => "30", :src => "https://avatars.githubusercontent.com/u/1189369?v=3&s=30", :title => "", :width => "30"}/
           %a{:href => "/rezzo"}
