show the scraper language in 'code' section as in lists
This is to be consistent in it's display.

Change the style of .scraper-lang to apply more generally,
and put it in the 'source code' section benieth the heading.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -205,6 +205,11 @@ a i.fa-clock-o {
   text-decoration: none;
 }
 
+.scraper-lang {
+  color: lighten($gray-light, 10%);
+  font-weight: bold;
+}
+
 .scraper-block {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -214,8 +219,6 @@ a i.fa-clock-o {
 
   .scraper-lang {
     margin: .2em 0 0 .25em;
-    color: lighten($gray-light, 10%);
-    font-weight: bold;
     width: 4em;
     text-align: right;
   }
