display scraper repo/file in "rep / file" format
This simplifies the layout, and presents the file in a familiar
way for developers. This display is less explanitory, but we don't
think that will be a big problem for scraper author.

This removes the headings from the section and merges the separate
repo and file links into a single 'repo_name / filename.rb' line,
still two separate links.

--- a/app/views/scrapers/_show_normal.html.haml
+++ b/app/views/scrapers/_show_normal.html.haml
@@ -75,13 +75,12 @@
         %strong.scraper-lang= scraper.language.human
       - if scraper.github_url
         %p
-          %h5 Repository
+
           = link_to scraper.github_url, target: "_blank" do
             = scraper.name
-            repo
           - if scraper.main_scraper_filename
-            %h5 Main scraper
-            #{link_to scraper.main_scraper_filename, scraper.github_url_main_scraper_file, target: "_blank"}
+            \/
+            = link_to scraper.main_scraper_filename, scraper.github_url_main_scraper_file, target: "_blank"
     %p
       .form-group
         %label(for="git_url") git clone URL
