make count of scraper downloads dynamic
Show the actual count of scraper downloads,
not the static prototype.

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -6,7 +6,10 @@
       %header.data-header
         %h3 Data
         %p.scraper-data-usage
-          %strong Downloaded 1934 times
+          %strong
+            Downloaded
+            = scraper.downloads.count
+            times
           by
           - # TODO: Replace this hardcoded stuff to show people/orgs who downloaded the scraper
           %a{:href => "/ciudadanointeligente"}
