--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -14,7 +14,7 @@
               by
               - scraper.downloaders.each do |downloader|
                 = link_to downloader do
-                  = image_tag downloader.gravatar_url(30), size: "30x30", title: "Downloaded #{pluralize(downloader.scraper_download_count(scraper), 'time')} by #{downloader.name}", alt: downloader.name, class: 'img-circle has-tooltip'
+                  = image_tag downloader.gravatar_url(30), size: "30x30", title: "Downloaded #{pluralize(downloader.scraper_download_count(scraper), 'time')} by #{downloader.nickname}", alt: downloader.nickname, class: 'img-circle has-tooltip'
 
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
