Add a semantic class to domains list for applying styles

--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -11,5 +11,5 @@
       %div
         - unless scraper.description.blank?
           = scraper.description
-        %p.text-muted
+        %p.scraper-domains-list.text-muted
           Scrapes osom.cfa.vic.gov.au, ruralfire.qld.gov.au, sentinel.ga.gov.au, and 5 other domains.
