Remove extra space after domains list
There is an extra line of space added by the <p> styles,
that isn't necessary where the domains list is shown in the
scraper lists.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -230,6 +230,10 @@ a i.fa-clock-o {
   font-weight: bold;
 }
 
+.scraper-domains-list {
+  margin-bottom: 0;
+}
+
 .scraper-block {
   overflow: hidden;
   text-overflow: ellipsis;
