Remove sentence structure from domains list in scraper lists (Static prototype)
The domains list is displayed as a full sentence on scrapers#show
pages, e.g. 'Scrapes www.banrep.gov.co, www.federaciondecafeteros.org,
and www.ico.org'. Citizens are likely to arrive on this page via
search or via a link, so this more explanatory format is helpful.

When viewing lists of scrapers, comparing,
searching for or browsing scrapers, citizens are more likely already familiar
with what scrapers do. They are can also click into a scraper to get more
information. In these lists, the sentence structure just adds more
"non-data ink" or noise to the pages that citizens are trying to
read through.

Remove the sentence structure here and just leave the information,
e.g. 'www.banrep.gov.co, www.federaciondecafeteros.org, www.ico.org',
so that citizens can focus on what they're looking for.

If there are more than three scrapers, append 'and xx others', for
example 'www.banrep.gov.co, federaciondecafeteros.org, www.ico.org and five
others'.

--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -12,4 +12,4 @@
         - unless scraper.description.blank?
           = scraper.description
         %p.scraper-domains-list.text-muted
-          Scrapes osom.cfa.vic.gov.au, ruralfire.qld.gov.au, sentinel.ga.gov.au, and 5 other domains.
+          osom.cfa.vic.gov.au, ruralfire.qld.gov.au, sentinel.ga.gov.au, and 5 others
