--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -6,7 +6,7 @@
       .icon-box.pull-right= render partial: "scrapers/auto_clock", locals: {scraper: scraper}
       .icon-box.pull-right= render partial: "scrapers/running_indicator", locals: {scraper: scraper}
       - if scraper.last_run && scraper.last_run.finished_with_errors?
-        %span.label.label-danger errored
+        %span.label.label-danger.pull-right errored
       %strong.full_name= scraper.full_name
       %div
         - unless scraper.description.blank?
