--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -4,8 +4,9 @@
       - unless scraper.language.blank?
         %small.scraper-lang.pull-right= scraper.language.human
       .icon-box.pull-right= render partial: "scrapers/auto_clock", locals: {scraper: scraper}
-      .icon-box.pull-right= render partial: "scrapers/running_indicator", locals: {scraper: scraper}
-      - if scraper.last_run && scraper.last_run.finished_with_errors?
+      - if scraper.queued? || scraper.running?
+        .icon-box.pull-right= render partial: "scrapers/running_indicator", locals: {scraper: scraper}
+      - elsif scraper.last_run && scraper.last_run.finished_with_errors?
         %span.label.label-danger.pull-right errored
       %strong.full_name= scraper.full_name
       %div
