Color the scraper name as a link in scraper lists
Giving the scraper name/title a link colour gives it more
prominence, giving more visual structure to the scraper item. It
also makes it clearer it's a link to click.

relates to #674

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -236,6 +236,12 @@ a i.fa-clock-o {
 
   .full_name {
     word-break: break-all;
+    color: $link-color;
+  }
+
+  a:hover & .full_name,
+  a:focus & .full_name {
+    color: $link-hover-color;
   }
 
   .scraper-lang {
