Make scraper titles bigger in scraper lists
On wider screens, give the scraper list items more visual structure
by increasing the size of the title. This makes them consistent
with user list items and makes the headings stand out more.

fixes #674

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -237,6 +237,10 @@ a i.fa-clock-o {
   .full_name {
     word-break: break-all;
     color: $link-color;
+
+    @media (min-width: 40em) {
+      font-size: $font-size-h4;
+    }
   }
 
   a:hover & .full_name,
