--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -11,5 +11,5 @@
       %div
         - unless scraper.description.blank?
           = scraper.description
-        %p.scraper-domains-list.text-muted
-          osom.cfa.vic.gov.au, ruralfire.qld.gov.au, sentinel.ga.gov.au, and 5 others
+        - unless scraper.scraped_domains.empty?
+          %p.scraper-domains-list.text-muted= simplified_scraped_domains_list(scraper.scraped_domains)
