--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -9,4 +9,5 @@
       - unless scraper.description.blank?
         = highlight[:description] ? highlight[:description].html_safe : scraper.description
       - unless scraper.scraped_domains.empty?
-        %p.scraper-domains-list.text-muted= simplified_scraped_domains_list(scraper.scraped_domains)
+        %p.scraper-domains-list.text-muted
+          = highlight[:"scraped_domain_names.word_end"] ? highlight[:"scraped_domain_names.word_end"].html_safe : simplified_scraped_domains_list(scraper.scraped_domains)
