--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -4,7 +4,7 @@
   %div.scraper-block
     - unless scraper.language.blank?
       %small.scraper-lang.pull-right= scraper.language.human
-    %strong.full_name= highlight[:full_name] ? highlight[:full_name].html_safe : scraper.full_name
+    %strong.full_name= highlight[:"full_name.word_middle"] ? highlight[:"full_name.word_middle"].html_safe : scraper.full_name
     %div
       - unless scraper.description.blank?
         = highlight[:description] ? highlight[:description].html_safe : scraper.description
