--- a/app/views/sync/scrapers/_scraper.html.haml
+++ b/app/views/sync/scrapers/_scraper.html.haml
@@ -1,1 +1,1 @@
-= render partial: "scrapers/scraper_base", locals: {scraper: scraper}
+= render partial: "scrapers/scraper_base", locals: {scraper: scraper, hide_owner: false}
