--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -2,7 +2,7 @@
   .search-header
     =form_tag search_path, method: "get", class: "form-inline" do
       %h1.label-heading
-        %label Search
+        %label Search over 2000 scrapers
       .input-group.col-sm-12.col-md-8.col-lg-7
         = hidden_field_tag :type, @type
         %input.form-control#query{required: "required", type: "search", autofocus: (@q.blank? ? true : false), maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
