Remove autofocus from search banner input

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -6,7 +6,7 @@
           %label Search over 2000 scrapers
         .input-group.col-sm-12.col-md-8.col-lg-7
           = hidden_field_tag :type, @type
-          %input.form-control#query{required: "required", type: "search", autofocus: (@q.blank? ? true : false), maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
+          %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
           .input-group-btn
             %button.btn.btn-primary{type: "submit"} Search
         %p.search-suggestions
