Reduce the size of search banner heading for small screens
This is necessary because the text is quite long.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -11,6 +11,24 @@
   }
 }
 
+.banner-search {
+  .label-heading {
+    font-size: $font-size-h4;
+
+    @media (min-width: $screen-xs-min) {
+      font-size: $font-size-h3;
+    }
+
+    @media (min-width: $screen-sm-min) {
+      font-size: $font-size-h2;
+    }
+
+    @media (min-width: $screen-md-min) {
+      font-size: $font-size-h1;
+    }
+  }
+}
+
 .search-suggestions {
   margin-top: .75em;
 }
