Add padding to the search banner for wide screens
Adds more focus to the form.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -12,6 +12,11 @@
 }
 
 .banner-search {
+  @media (min-width: $screen-md-min) {
+    padding-bottom: 24px;
+    padding-top: 24px;
+  }
+
   .label-heading {
     font-size: $font-size-h4;
 
