Capitalise suggestions sentence

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -10,7 +10,7 @@
           .input-group-btn
             %button.btn.btn-primary{type: "submit"} Search
         %p.search-suggestions
-          try #{link_to "parliament", search_path(q: "parliament")},
+          Try #{link_to "parliament", search_path(q: "parliament")},
           #{ link_to "planning", search_path(q: "planning")} or
           #{ link_to "Ghana", search_path(q: "Ghana")}
 
