Increase font size of suggestions on wide screens

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -36,6 +36,10 @@
 
 .search-suggestions {
   margin-top: .75em;
+
+  @media (min-width: $screen-md-min) {
+    font-size: 1.125em;
+  }
 }
 
 .banner-wrapper {
