Make the scraper count dynamic in search title

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -3,7 +3,7 @@
     .search-header
       =form_tag search_path, method: "get", class: "form-inline" do
         %h1.label-heading
-          %label Search over 2000 scrapers
+          %label Search over #{pluralize(Scraper.count, "scraper")}
         .input-group.col-sm-12.col-md-9.col-lg-8
           = hidden_field_tag :type, @type
           %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
