Add a gobal pre-heading style

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,7 @@
 @import "font-awesome";
 @import "vendor/tablesaw.stackonly";
 
+@import "global/typography";
 @import "global/site-header";
 @import "global/alerts";
 @import "bootstrap_and_overrides";
