--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -3,6 +3,7 @@
     .search-header
       =form_tag search_path, method: "get", class: "form-inline" do
         %h1.label-heading
+          %small.pre-heading Find data and code you can use
           %label Search over #{pluralize(Scraper.count, "scraper")}
         .input-group.col-sm-12.col-md-9.col-lg-8
           = hidden_field_tag :type, @type
