Add slight spacing between search heading and pre-heading

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -31,6 +31,10 @@
     @media (min-width: $screen-md-min) {
       font-size: $font-size-h1;
     }
+
+    .pre-heading {
+      margin-bottom: .2em;
+    }
   }
 }
 
