Extract partial for search banner

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -1,19 +1,4 @@
-.banner-search.banner
-  .container
-    .search-header
-      =form_tag search_path, method: "get", class: "form-inline" do
-        %h1.label-heading
-          %small.pre-heading Find data and code you can use
-          %label Search over #{pluralize(Scraper.count, "scraper")}
-        .input-group.col-sm-12.col-md-9.col-lg-8
-          = hidden_field_tag :type, @type
-          %input.form-control#query{required: "required", type: "search", maxlength: "256", name: "q", value: "#{@q if !@q.blank?}"}/
-          .input-group-btn
-            %button.btn.btn-primary{type: "submit"} Search
-        %p.search-suggestions
-          Try #{link_to "parliament", search_path(q: "parliament")},
-          #{ link_to "planning", search_path(q: "planning")} or
-          #{ link_to "Ghana", search_path(q: "Ghana")}
+= render partial: "search_banner"
 
 .container
   .row
