Rename partial now that it isn't the banner

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -1,7 +1,7 @@
 .container
   %h1.label-heading
     Search
-  = render partial: "search_banner"
+  = render partial: "search_form"
 
   - if @q
     - if @scrapers.any? || @owners.any?
