--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -3,7 +3,7 @@
     %h1.label-heading
       %small.pre-heading Find data and code you can use
       Search over #{pluralize(floor_to_hundreds(Scraper.count), "scraper")}
-    = render partial: "search_banner"
+    = render partial: "search_form"
 
 .container
   .row
