Include a tip for what to include in the description.

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -17,5 +17,9 @@
           %span.help-block Name to give the scraper here and on GitHub
 
     = f.input :description, label: "What data will your scraper collect?"
+    %p.help-block
+      %strong Tip:
+      Remember to include key words like the common name for this data and the source where it comes from.
+      What would you enter in a search engine to find this data? Use those key terms.
 
     = f.button :submit
