Add a placeholder example for the description

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -16,7 +16,7 @@
             = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
           %span.help-block Name to give the scraper here and on GitHub
 
-    = f.input :description, label: "What data will your scraper collect?"
+    = f.input :description, label: "What data will your scraper collect?", placeholder: "e.g. City of Sydney Development Applications"
     %p.help-block
       %strong Tip:
       Remember to include key words like the common name for this data and the source where it comes from.
