Make the tip text a little friendlier

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -20,6 +20,6 @@
     %p.help-block
       %strong Tip:
       Remember to include key words like the common name for this data and the source where it comes from.
-      What would you enter in a search engine to find this data? Use those key terms.
+      What would you enter in a search engine to find this data? Remember to include those key terms.
 
     = f.button :submit
