Reduced the width of the description input for wide screens

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -16,9 +16,11 @@
             = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
           %span.help-block Name to give the scraper here and on GitHub
 
-    = f.input :description,
-              label: "What data will your scraper collect?",
-              placeholder: "e.g. City of Sydney Development Applications",
-              hint: "Tip: Remember to include key words like the common name for this data and the source where it comes from. What would you enter in a search engine to find this data? Remember to include those key terms."
+    .row
+      .col-sm-10.col-md-8
+        = f.input :description,
+                  label: "What data will your scraper collect?",
+                  placeholder: "e.g. City of Sydney Development Applications",
+                  hint: "Tip: Remember to include key words like the common name for this data and the source where it comes from. What would you enter in a search engine to find this data? Remember to include those key terms."
 
     = f.button :submit
