Download counts decide whether to show everything or not

--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -5,16 +5,15 @@
     - if active_table
       %header.data-header
         %h3 Data
-        - if current_user && current_user.see_downloads
-          %p.scraper-data-usage
-            %strong
-              Downloaded
-              = pluralize(scraper.download_count, "time")
-            - if scraper.download_count > 0
-              by
-              - scraper.download_count_by_owner.each do |downloader,count|
-                = link_to downloader do
-                  = owner_image(downloader, 30, true, "Downloaded #{pluralize(count, 'time')} by #{downloader.nickname}")
+        %p.scraper-data-usage
+          %strong
+            Downloaded
+            = pluralize(scraper.download_count(current_user && current_user.see_downloads), "time")
+          - if scraper.download_count(current_user && current_user.see_downloads) > 0
+            by
+            - scraper.download_count_by_owner(current_user && current_user.see_downloads).each do |downloader,count|
+              = link_to downloader do
+                = owner_image(downloader, 30, true, "Downloaded #{pluralize(count, 'time')} by #{downloader.nickname}")
 
       %ul.nav.nav-tabs
         - scraper.database.table_names.each do |table|
