--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -207,8 +207,7 @@
                     = link_to "morph.io", root_url(@analytics_params)
                     is letting you know that
 
-                  %h3 #{pluralize(@successful_scrapers.count, "scraper")} finished successfully
-                  %h3 #{pluralize(@broken_scrapers.count, "scraper")} errored
+                  %h3= alert_scrapers_summary_sentence(@successful_scrapers.count, @broken_scrapers.count)
 
                   - @broken_scrapers.each do |scraper|
                     %h3
