Add class for scraper alerts list pattern

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -14,7 +14,7 @@
 .container
   - # Static Prototype of scrapers that need attention list
   %h2 2 scrapers you are watching need help
-  .list-group
+  .scraper-alerts-list.list-group
     %a.list-group-item{:href => "/planningalerts-scrapers/leichhardt"}
       .scraper-block
         %small.scraper-lang.pull-right Ruby
