--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -25,6 +25,8 @@
         %div
           Leichhardt Municipal Council Development Applications
           %p.scraper-domains-list.text-muted www.eservices.lmc.nsw.gov.au
+      .scraper-error-info.row
+        Last run failed 10min ago
     %a.list-group-item{:href => "/planningalerts-scrapers/scenic_rim"}
       .scraper-block
         %small.scraper-lang.pull-right Ruby
@@ -35,6 +37,8 @@
         %div
           Scenic Rim Regional Council Development Applications
           %p.scraper-domains-list.text-muted pdonline.scenicrim.qld.gov.au
+      .scraper-error-info.row
+        Errored for 9 days – last run failed 5 hours ago
 
   = link_to "Manage your watched scrapers", " "
 
