Make the form submit button more salient
Now that the description section is a bit bigger, bring some focus
back to the submit button by giving it the blue, "btn-primary" style.

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -23,4 +23,4 @@
                   placeholder: "e.g. City of Sydney Development Applications",
                   hint: "Tip: Remember to include key words like the common name for this data and the source where it comes from. What would you enter in a search engine to find this data? Remember to include those key terms."
 
-    = f.button :submit
+    = f.button :submit, class: "btn-primary"
