Simplify helper text

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -21,6 +21,6 @@
         = f.input :description,
                   label: "What data will your scraper collect?",
                   placeholder: "e.g. City of Sydney Development Applications",
-                  hint: "Tip: Remember to include key words like the common name for this data and the source where it comes from. What would you enter in a search engine to find this data? Remember to include those key terms."
+                  hint: "Tip: Remember to include key words like location and organisation names, and the terms you would search when looking for this data."
 
     = f.button :submit, class: "btn-primary"
