Remove last run information from list item
Because we're only showing alerts for scrapers that started erroring
in the last 24 hours (761d19d)

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -26,7 +26,7 @@
           Leichhardt Municipal Council Development Applications
           %p.scraper-domains-list.text-muted www.eservices.lmc.nsw.gov.au
       .scraper-error-info.row
-        Last run failed 10min ago
+        Erroed for 5 hours
     %a.list-group-item{:href => "/planningalerts-scrapers/scenic_rim"}
       .scraper-block
         %small.scraper-lang.pull-right Ruby
@@ -38,7 +38,7 @@
           Scenic Rim Regional Council Development Applications
           %p.scraper-domains-list.text-muted pdonline.scenicrim.qld.gov.au
       .scraper-error-info.row
-        Errored for 9 days – last run failed 5 hours ago
+        Errored for 1 day
 
   = link_to "Manage your watched scrapers", " "
 
