Wrap link in semantic <p> to make layout more stable

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -41,7 +41,7 @@
         .scraper-error-info.row
           Errored for 1 day
 
-  = link_to "Manage your watched scrapers", " "
+  %p= link_to "Manage your watched scrapers", " "
 
   .row
     .col-md-6
