Make link dynamic (point to real address)

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -42,7 +42,7 @@
           .scraper-error-info.row
             Errored for 1 day
 
-    %p= link_to "Manage your watched scrapers", " "
+    %p= link_to "Manage your watched scrapers", watching_user_path(current_user)
 
   .row
     .col-md-6
