--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -15,3 +15,23 @@
   font-style: normal;
   background-color: rgba(255,255,140,0.5);
 }
+
+.list-filters {
+  margin: 0 0 20px;
+
+  @media (min-width: 18em) {
+    display: flex;
+  }
+
+  @media (min-width: 40em) {
+    display: inline-block;
+  }
+
+  a {
+    font-size: $font-size-small;
+
+    @media (min-width: 18em) {
+      flex-grow: 1;
+    }
+  }
+}
