Move filters inline with the tabs for wide screens
This puts the filters on the right-hand side of the search nav tabs.

It puts less focus on the filters and more on the results and is
more balanced visually.

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -11,9 +11,15 @@
   margin-bottom: 2em;
 }
 
-.search-results em {
-  font-style: normal;
-  background-color: rgba(255,255,140,0.5);
+.search-results {
+  @media (min-width: 40em) {
+    position: relative;
+  }
+
+  em {
+    font-style: normal;
+    background-color: rgba(255,255,140,0.5);
+  }
 }
 
 .list-filters {
@@ -25,6 +31,9 @@
 
   @media (min-width: 40em) {
     display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 
   a {
