Make the filter buttons smaller on wide screens

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -42,5 +42,9 @@
     @media (min-width: 18em) {
       flex-grow: 1;
     }
+
+    @media (min-width: 40em) {
+      padding: 5px 15px;
+    }
   }
 }
