Make highlight style selector more specific
This means <em> is styled italic, no background color in alerts.
The <em>with data</em> in the no scrapers with data notice was
being styled with a highlight.

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -16,7 +16,7 @@
     position: relative;
   }
 
-  em {
+  .list-group-item em {
     font-style: normal;
     background-color: rgba(255,255,140,0.5);
   }
