Make sentence clearer by separating concepts

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -40,8 +40,8 @@
         - elsif @type != "users" && @show != "all" && @scrapers.empty?
           .alert.alert-info
             Sorry, we couldn’t find any scrapers
-            %em with data
-            relevant to your search term
+            %em with data,
+            that are relevant to your search term
             %strong “#{@q}”.
 
     - else
