Fix wording on watching page because we don't just alert about scrapers run automatically

--- a/app/views/users/watching.html.haml
+++ b/app/views/users/watching.html.haml
@@ -5,7 +5,7 @@
     %h1 Scrapers watched by #{@user.nickname}
 
   %p
-    For scrapers in this list that are set to run automatically, if any error then
+    If any scrapers in this list error then
     - if @user == current_user
       you
     - else
